--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,9 @@ h1 {
 /* end form styles */
 
 .result {
+  border: 5px solid chartreuse;
   font-size: 4.5rem;
+  height: 100px;
   margin-top: 3rem;
   text-align: center;
 }
