Change sum background to darker color

--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ h1 {
 /* end form styles */
 
 .result {
-  background-color: blanchedalmond;
+  background-color: burlywood;
   font-size: 4.5rem;
   margin-top: 3rem;
   text-align: center;
